--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "wanling",
-  "name": "wanling",
+  "short_name": "penglai",
+  "name": "penglai",
   "icons": [
     {
       "src": "favicon.png",
